Aktualisiere Nachrichtenquellen und füge Wetteraktualisierungsfunktion hinzu

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <section><h2>My-Newspad</h2></section>
             <section>
                 <section class="selection" id="all">Alle News</section>
-                <section class="selection" id="technic">Technik News</section>
-                <section class="selection" id="xxx">xxx</section>
+                <section class="selection none" id="technic">Technik News</section>
+                <section class="selection none" id="wissen">Wissen</section>
             </section>
         </header>
         <main>
