Aktualisiere die Nachrichten- und Meme-Funktionen mit neuen Event-Handlern und füge LowDB zur Speicherung von Nachrichten hinzu

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <header>
             <section><h2>My-Newspad</h2></section>
             <section>
-                <section class="selection" id="all">Alle News</section>
-                <section class="selection none" id="technic">Technik News</section>
-                <section class="selection none" id="wissen">Wissen</section>
+                <section class="selection" id="all" onclick="getNews()">Alle News</section>
+                <section class="selection none" id="technic" onclick="getTechnik()">Technik News</section>
+                <section class="selection none" id="wissen" onclick="getMemes()">Wissen</section>
             </section>
         </header>
         <main>
