--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body onload="getNews(); fetchWeather(52.52000660, 13.40495400);">
         <header>
             <section><h2>My-Newspad</h2></section>
-            <section>
+            <section class="selections">
                 <section class="selection" id="all" onclick="getNews()">Alle News</section>
                 <section class="selection none" id="technic" onclick="getTechnik()">Technik News</section>
                 <section class="selection none" id="wissen" onclick="getMemes()">Wissen</section>
