Füge Noto Sans Schriftarten hinzu und aktualisiere die CSS-Datei zur Verwendung dieser Schriftart

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset='UTF-8'>
         <meta name='viewport' content='width=device-width'>
         <link rel='stylesheet' href='style.css'>
-        <script src='main.js'></script>
+        <script src='renderer.js'></script>
     </head>
-    <body onload="getNews(); fetchWeather(52.52000660, 13.40495400);">
+    <body onload="getNews(); updateWeather(52.52000660, 13.40495400);">
         <header>
             <section><h2>My-Newspad</h2></section>
             <section class="selections">
