Füge Readability-Bibliothek hinzu und implementiere Funktion zum Abrufen und Anzeigen von Artikeln. Aktualisiere das Nachrichten-Rendering mit einer Schaltfläche "Mehr erfahren".

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset='UTF-8'>
         <meta name='viewport' content='width=device-width'>
         <link rel='stylesheet' href='style.css'>
+        <script src='Readability.js'></script>
         <script src='renderer.js'></script>
     </head>
     <body onload="getNews(); updateWeather(52.52000660, 13.40495400);">
