--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     </head>
     <body onload="getNews(); updateWeather(52.52000660, 13.40495400);">
         <header>
-            <section><button type="button" onclick="location.reload()">Reload</button>
+            <section><button type="button" onclick="getNews(); updateWeather(52.52000660, 13.40495400)">Reload</button>
                 <h2>My-Newspad</h2>
             </section>
             <section class="selections">
-                <section class="selection" id="all" onclick="getNews()">Alle News</section>
-                <section class="selection none" id="technic" onclick="getTechnik()">Technik News</section>
-                <section class="selection none" id="memes" onclick="getMemes()">Memes</section>
+                <section class="selection" id="all" onclick="getNews(); getNews()">Alle News</section>
+                <section class="selection none" id="technic" onclick="getTechnik(); getTechnik()">Technik News</section>
+                <section class="selection none" id="memes" onclick="getMemes(); getMemes()">Memes</section>
             </section>
         </header>
         <main>
