feat: aktualisiere die Nachrichtenabruf-Funktionen auf asynchrone Verarbeitung und verbessere die Benutzeroberfläche mit Ladehinweisen style: füge unteren Rand zu Schaltflächen hinzu für bessere visuelle Trennung

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
                 <h2>My-Newspad</h2>
             </section>
             <section class="selections">
-                <section class="selection" id="all" onclick="getNews(); getNews()">Alle News</section>
-                <section class="selection none" id="technic" onclick="getTechnik(); getTechnik()">Technik News</section>
-                <section class="selection none" id="memes" onclick="getMemes(); getMemes()">Memes</section>
+                <section class="selection" id="all" onclick="getNews()">Alle News</section>
+                <section class="selection none" id="technic" onclick="getTechnik()">Technik News</section>
+                <section class="selection none" id="memes" onclick="getMemes()">Memes</section>
             </section>
         </header>
         <main>
